@@ -1,5 +1,8 @@
 2001-06-22  Andrej Borsenkow  <bor@zsh.org>
 
+	* 15021: Src/prompt.c, Doc/Zsh/prompt.yo: revert to old %l
+	semantic; add new %y character instead as suggested by Wayne
+
 	* 15038: Test/A01grammar.ztst: test case for 15023.
 	(unposted) fix a couple of typos in test decriptions
 
